--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cxtmanager-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Git-like CLI for AI context management",
   "main": "dist/index.js",
   "bin": {
@@ -19,7 +19,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@cxtmanager/core": "^1.0.0",
+    "@cxtmanager/core": "workspace:*",
     "commander": "^12.1.0",
     "inquirer": "^12.0.0",
     "chalk": "^5.3.0",
