--- a/core/package.json
+++ b/core/package.json
@@ -17,18 +17,18 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "simple-git": "^3.27.0",
+    "chalk": "^5.3.0",
     "fs-extra": "^11.2.0",
-    "yaml": "^2.7.0",
-    "chalk": "^5.3.0"
+    "simple-git": "^3.30.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "@types/node": "^20.17.0",
     "@types/fs-extra": "^11.0.0",
-    "jest": "^29.7.0",
     "@types/jest": "^29.5.14",
-    "ts-jest": "^29.2.5"
+    "@types/node": "^20.17.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.9.3"
   },
   "publishConfig": {
     "access": "public"
@@ -60,4 +60,3 @@
     "email": "hello@digitalbrew.tech"
   }
 }
-
