--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -220,13 +220,15 @@ jobs:
           
           # Update package.json to use version instead of workspace:*
           # This is critical - npm cannot publish packages with workspace: protocol
-          node -e "
+          CORE_VERSION=$(node -p "require('./core/package.json').version")
+          node << EOF
             const fs = require('fs');
             const path = './cli/package.json';
             const pkg = JSON.parse(fs.readFileSync(path, 'utf8'));
-            pkg.dependencies['@cxtmanager/core'] = '^' + '$CORE_VERSION';
+            const coreVersion = '$CORE_VERSION';
+            pkg.dependencies['@cxtmanager/core'] = '^' + coreVersion;
             fs.writeFileSync(path, JSON.stringify(pkg, null, 2) + '\n');
-          "
+EOF
           
           # Verify the update
           echo "Updated CLI package.json dependency:"
