--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -213,14 +213,13 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Update CLI dependency for publishing
-        if: steps.check-changes.outputs.has_code_changes == 'true' && steps.check-release.outputs.already_released == 'false' && steps.version-check.outputs.tag_exists == 'true' && steps.version-check.outputs.core_published == 'false'
+        if: steps.check-changes.outputs.has_code_changes == 'true' && steps.check-release.outputs.already_released == 'false' && steps.version-check.outputs.tag_exists == 'true' && steps.version-check.outputs.cli_published == 'false'
         run: |
           CORE_VERSION=$(node -p "require('./core/package.json').version")
           echo "Updating CLI dependency to @cxtmanager/core@^$CORE_VERSION for publishing"
           
           # Update package.json to use version instead of workspace:*
           # This is critical - npm cannot publish packages with workspace: protocol
-          CORE_VERSION=$(node -p "require('./core/package.json').version")
           node << EOF
             const fs = require('fs');
             const path = './cli/package.json';
@@ -253,6 +252,24 @@ EOF
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Restore CLI dependency to workspace
+        if: steps.check-changes.outputs.has_code_changes == 'true' && steps.check-release.outputs.already_released == 'false' && steps.version-check.outputs.tag_exists == 'true'
+        run: |
+          echo "Restoring CLI dependency to workspace:* for development"
+          
+          # Restore package.json to use workspace: protocol for development
+          node << 'EOF'
+            const fs = require('fs');
+            const path = './cli/package.json';
+            const pkg = JSON.parse(fs.readFileSync(path, 'utf8'));
+            pkg.dependencies['@cxtmanager/core'] = 'workspace:*';
+            fs.writeFileSync(path, JSON.stringify(pkg, null, 2) + '\n');
+EOF
+          
+          # Verify the restoration
+          echo "Restored CLI package.json dependency:"
+          grep -A 1 '"@cxtmanager/core"' cli/package.json
 
       - name: Create GitHub Release
         if: steps.check-changes.outputs.has_code_changes == 'true' && steps.check-release.outputs.already_released == 'false' && steps.version-check.outputs.tag_exists == 'true'
