--- a/core/package.json
+++ b/core/package.json
@@ -50,7 +50,7 @@
     "documentation"
   ],
   "author": "Digital Brew LLC <hello@digitalbrew.tech>",
-  "license": "AGPL-3.0",
+  "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
   },
