--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -17,8 +17,9 @@
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*", "../node_modules/*"]
-    }
+    },
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist"]
 } 
